grammar.js
        source_file: $ => repeat(choice(
            $._icl_source_items,
            // Illegal by the spec but makes the testing much simpler
            $._module_statement,
        )),

        _icl_source_items: $ => choice(
            $.namespace_definition,
            prec(1, $.use_namespace_definition),
            $.module_definition
        ),
        module_definition: $ => seq(
            'Module',
            $.scalar_identifier,
            $.module_body
        ),
        module_body: $ => seq(
            '{',
            repeat($._module_statement),
            '}'
        ),

        _module_statement: $ => choice(
            $.use_namespace_definition,
            $._port_definition,
            $.instance_definition,
            $.scan_register_definition,
            $.data_register_definition,
            $.logic_signal_definition,
            $.scan_mux_definition,
            $.data_mux_definition,
            $.clock_mux_definition,
            $.onehot_data_group_definition,
            $.onehot_scan_group_definition,
            $.scan_interface_definition,
            $._access_link_definition,
            $.alias_definition,
            $.enum_definition,
            $.parameter_definition,
            $.local_parameter_definition,
            $.attribute_definition,
        ),

        scalar_identifier: $ => /[a-zA-Z][a-zA-Z0-9_$]*/,
        enum_name: $ => /[a-zA-Z][a-zA-Z0-9_$]*/,
        //enum_name: $ => alias($.scalar_identifier, $.enum_name),

        scan_in_port_definition: $ => seq(
            'ScanInPort', $.scalar_identifier,
            choice(
                ';',
                seq('{', repeat($.attribute_definition), '}')
            ),
        ),
        capture_enable_port_definition: $ => seq(
            'CaptureEnPort', $.scalar_identifier,
            choice(
                ';',
                seq('{', repeat($.attribute_definition), '}')
            ),
        ),
        shift_enable_port_definition: $ => seq(
            'ShiftEnPort', $.scalar_identifier,
            choice(
                ';',
                seq('{', repeat($.attribute_definition), '}')
            ),
        ),
        update_enable_port_definition: $ => seq(
            'UpdateEnPort', $.scalar_identifier,
            choice(
                ';',
                seq('{', repeat($.attribute_definition), '}')
            ),
        ),
        select_port_definition: $ => seq(
            'SelectPort', $.scalar_identifier,
            choice(
                ';',
                seq('{', repeat($.attribute_definition), '}')
            ),
        ),
        reset_port_definition: $ => seq(
            'ResetPort', $.scalar_identifier,
            choice(
                ';',
                seq('{', repeat($._reset_port_item), '}')
            ),
        ),
        tck_port_definition: $ => seq(
            'TCKPort', $.scalar_identifier,
            choice(
                ';',
                seq('{', repeat($.attribute_definition), '}')
            ),
        ),
        scan_out_port_definition: $ => seq(
            'ScanOutPort', $.scalar_identifier,
            choice(
                ';',
                seq('{', repeat($._scan_out_port_item), '}')
            ),
        ),

        _scan_out_port_item: $ => choice(
            $.attribute_definition,
            $.port_source,
            $.port_enable
        ),
        _data_in_port_item: $ => choice(
            $.attribute_definition,
            $.ref_enum,
            $.port_default_load_value,
        ),
        _data_out_port_item: $ => choice(
            $.attribute_definition,
            $.port_source,
            $.port_enable,
            $.ref_enum,
        ),
        _reset_port_item: $ => choice(
            $.attribute_definition,
            $.port_source,
            $.port_active_polarity,
        ),
        _trst_port_item: $ => choice(
            $.attribute_definition,
            $.port_source,
        ),
        _clock_port_item: $ => choice(
            $.attribute_definition,
            $.port_differential_inv_of
        ),
        _trst_port_item: $ => choice(
            $.attribute_definition,
            $.port_source,
        ),
        _to_shift_enable_port_item: $ => choice(
            $.attribute_definition,
            $.port_source,
        ),
        _to_capture_enable_port_item: $ => choice(
            $.attribute_definition,
            $.port_source,
        ),
        _to_update_enable_port_item: $ => choice(
            $.attribute_definition,
            $.port_source,
        ),
        _to_select_port_item: $ => choice(
            $.attribute_definition,
            $.port_source,
        ),
        _to_reset_port_item: $ => choice(
            $.attribute_definition,
            $.port_source,
            $.port_active_polarity,
        ),
        _to_tms_port_item: $ => choice(
            $.attribute_definition,
            $.port_source,
        ),
        _to_trst_port_item: $ => choice(
            $.attribute_definition,
            $.port_source,
        ),
        _to_clock_port_item: $ => choice(
            $.attribute_definition,
            $.port_source,
            $.port_freq_multiplier,
            $.port_freq_divider,
            $.port_differential_inv_of,
            $.port_period
        ),

        port_source: $ => seq(
            'Source', $.concat_signal, ';'
        ),
        port_enable: $ => seq(
            'Enable', $.signal, ';'
        ),
        ref_enum: $ => seq(
            'RefEnum', $.enum_name, ';'
        ),
        port_default_load_value: $ => seq(
            'DefaultLoadValue',
            choice($.concat_number, $.scalar_identifier),
            ';'
        ),
        port_differential_inv_of: $ => seq(
            'DifferentialInvOf', $.signal, ';'
        ),
        port_active_polarity: $ => seq(
            'ActivePolarity', choice('0', '1'), ';'
        ),
        port_freq_multiplier: $ => seq(
            'FreqMultiplier', $._number, ';'
        ),
        port_freq_divider: $ => seq(
            'FreqDivider', $._number, ';'
        ),
        port_period: $ => seq(
            'Period', $.time, ';'
        ),


        data_in_port_definition: $ => seq(
            'DataInPort', $._signal_identifier,
            choice(
                ';',
                seq('{', repeat($._data_in_port_item), '}'),
            ),
        ),

        data_out_port_definition: $ => seq(
            'DataOutPort', $._signal_identifier,
            choice(
                ';',
                seq('{', repeat($._data_out_port_item), '}'),
            ),
        ),
        to_shift_enable_port_definition: $ => seq(
            'ToShiftEnPort', $._signal_identifier,
            choice(
                ';',
                seq('{', repeat($._to_shift_enable_port_item), '}'),
            ),
        ),

        to_update_enable_port_definition: $ => seq(
            'ToUpdateEnPort', $._signal_identifier,
            choice(
                ';',
                seq('{', repeat($._to_update_enable_port_item), '}'),
            ),
        ),

        to_capture_enable_port_definition: $ => seq(
            'ToCaptureEnPort', $._signal_identifier,
            choice(
                ';',
                seq('{', repeat($._to_capture_enable_port_item), '}'),
            ),
        ),

        to_select_port_definition: $ => seq(
            'ToSelectPort', $._signal_identifier,
            choice(
                ';',
                seq('{', repeat($._to_select_port_item), '}'),
            ),
        ),

        to_reset_port_definition: $ => seq(
            'ToResetPort', $._signal_identifier,
            choice(
                ';',
                seq('{', repeat($._to_reset_port_item), '}'),
            ),
        ),

        tms_port_definition: $ => seq(
            'TMSPort', $._signal_identifier,
            choice(
                ';',
                seq('{', repeat($.attribute_definition), '}'),
            ),
        ),

        to_tms_port_definition: $ => seq(
            'ToTMSPort', $._signal_identifier,
            choice(
                ';',
                seq('{', repeat($._to_tms_port_item), '}'),
            ),
        ),

        to_tck_port_definition: $ => seq(
            'ToTCKPort', $._signal_identifier,
            choice(
                ';',
                seq('{', repeat($.attribute_definition), '}'),
            ),
        ),

        clock_port_definition: $ => seq(
            'ClockPort', $._signal_identifier,
            choice(
                ';',
                seq('{', repeat($._clock_port_item), '}'),
            ),
        ),

        to_clock_port_definition: $ => seq(
            'ToClockPort', $._signal_identifier,
            choice(
                ';',
                seq('{', repeat($._to_clock_port_item), '}'),
            ),
        ),

        trst_port_definition: $ => seq(
            'TRSTPort', $._signal_identifier,
            choice(
                ';',
                seq('{', repeat($._trst_port_item), '}'),
            ),
        ),

        to_trst_port_definition: $ => seq(
            'ToTRSTPort', $._signal_identifier,
            choice(
                ';',
                seq('{', repeat($._to_trst_port_item), '}'),
            ),
        ),

        to_ir_select_port_definition: $ => seq(
            'ToIRSelectPort', $._signal_identifier,
            choice(
                ';',
                seq('{', repeat($.attribute_definition), '}'),
            ),
        ),

        address_port_definition: $ => seq(
            'AddressPort', $._signal_identifier,
            choice(
                ';',
                seq('{', repeat($.attribute_definition), '}'),
            ),
        ),

        write_enable_port_definition: $ => seq(
            'WriteEnPort', $._signal_identifier,
            choice(
                ';',
                seq('{', repeat($.attribute_definition), '}'),
            ),
        ),

        read_enable_port_definition: $ => seq(
            'ReadEnPort', $._signal_identifier,
            choice(
                ';',
                seq('{', repeat($.attribute_definition), '}'),
            ),
        ),

        attribute_definition: $ => seq(
            'Attribute', $.scalar_identifier,
            optional(seq('=', $.attribute_value)),
            ';'
        ),
        positive_integer: $ => /[0-9][0-9_]*/,

        signal: $ => choice(
            $._number,
            $._signal_identifier,
            $.hier_port
        ),

        //signal: $ => alias($._signal, $.signal),
        //signal: $ => seq(optional('~'), $._signal),
        //jtag_signal: $ => alias($._signal, $._jtag_signal),
        concat_signal: $ => prec.left(seq(
            $.signal,
            repeat(seq(',', $.signal))
        )),

        _signal_identifier: $ => prec.left(choice(
            $.scalar_identifier,
            $.vector_identifier
        )),
        _number: $ => prec.left(choice(
            $._unsized_number,
            $._sized_number,
            $.integer_expression
        )),

        time: $ => token(seq(
            /[0-9][0-9_]*/,
            optional(choice('s', 'ms', 'us', 'ns', 'ps', 'fs', 'as'))
        )),
